src/styles/styles.scss
@import "variables";

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.break {
  flex-basis: 100%;
  height: 0;
}

.wb-body {
  background-color: $windowBackgroundColor !important;
  padding: 1rem;
}

body {
  font-family: "Roboto Mono", sans-serif;
  background-color: $backgroundColor;
  color: $secondaryTextColor;
  font-size: 18px;
  line-height: 1.6;
  width: 100%;
  height: 100%;
}

h1 {
  color: $primaryTextColor;
  font-size: 50px;
  letter-spacing: -2px;
  margin-bottom: 20px;
}

h2 {
  color: $primaryTextColor;
}

h3 {
  margin-bottom: 10px;
}

ul {
  list-style-type: none;
}

a {
  color: $primaryTextColor;
  text-decoration: none;
}

p {
  margin: 20px 0;
}

nav {
  width: 30%;
}

nav ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

nav ul li {
  color: $primaryTextColor;
  cursor: pointer;
}

.container {
  max-width: 80vw;
  margin: auto;
  height: 70vh;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: left;
}

.hidden {
  display: none;
}

.cursor {
  font-weight: 700;
  animation: 1s blink step-end infinite;
}

@keyframes blink {
  from,
  to {
    color: transparent;
  }

  50% {
    color: $primaryTextColor;
  }
}

@media (max-width: 1200px) {
  legend {
    font-size: calc(1.275rem + 0.3vw);
  }
  h1,
  .h1 {
    font-size: calc(1.375rem + 1.5vw);
  }
  h2,
  .h2 {
    font-size: calc(1.325rem + 0.9vw);
  }
  h3,
  .h3 {
    font-size: calc(1.3rem + 0.6vw);
  }
  h4,
  .h4 {
    font-size: calc(1.275rem + 0.3vw);
  }
  .display-1 {
    font-size: calc(1.725rem + 5.7vw);
  }
  .display-2 {
    font-size: calc(1.675rem + 5.1vw);
  }
  .display-3 {
    font-size: calc(1.575rem + 3.9vw);
  }
  .display-4 {
    font-size: calc(1.475rem + 2.7vw);
  }
  .close {
    font-size: calc(1.275rem + 0.3vw);
  }
}

.mainContainer {
  min-height: 100vh;
  margin: 0;

  display: grid;
  grid-template-rows: auto 1fr auto;
}

header {
  min-height: 7rem;
  margin-left: 10vw;
  margin-top: 2vh;
}

footer {
  background: $primaryTextColor;
  max-height: 5vh;
}

.LsDisplayTaskbar {
  background-color: $secondaryTextColor;
  color: #111;
}

.LsDisplayWindow:hover > .LsDisplayTaskbar {
  background-color: $primaryTextColor;
  color: $secondaryTextColor;
}

.LsDisplayWindow {
  width: auto;
  justify-content: flex-start;
  min-height: 60vh;
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.popupWindowLinkButton {
  align-items: normal;
  background-color: rgba(0, 0, 0, 0);
  border-color: rgb(0, 0, 238);
  border-style: none;
  box-sizing: content-box;
  color: $primaryTextColor;
  cursor: pointer;
  display: inline;
  font: inherit;
  height: auto;
  padding: 0;
  perspective-origin: 0 0;
  text-align: start;
  text-decoration: none;
  transform-origin: 0 0;
  width: auto;
  -moz-appearance: none;
  -webkit-logical-height: 1em; /* Chrome ignores auto, so we have to use this hack to set the correct height  */
  -webkit-logical-width: auto; /* Chrome ignores auto, but here for completeness */
}

/* Mozilla uses a pseudo-element to show focus on buttons, */
/* but anchors are highlighted via the focus pseudo-class. */

@supports (-moz-appearance: none) {
  /* Mozilla-only */
  .popupWindowLinkButton::-moz-focus-inner {
    /* reset any predefined properties */
    border: none;
    padding: 0;
  }
  .popupWindowLinkButton:focus {
    /* add outline to focus pseudo-class */
    outline-style: dotted;
    outline-width: 1px;
  }
}

.projects {
  margin-left: 10px;
}

.projects-items {
  margin-left: 20px;
}

